Fixed bug where width of createdRooms.html and room.html has a right margin on mobile.

--- a/public/browse.css
+++ b/public/browse.css
@@ -104,10 +104,10 @@ body{
     font-size: 20px;
     color: black;
     overflow-x: hidden;
-    border: 1px red solid;
 }
 
 .roomNameAndImg {
+    width: 310px;
     padding-left: 30px;
 }
 
