--- a/public/createdRooms.css
+++ b/public/createdRooms.css
@@ -140,6 +140,7 @@ button:hover {
 }
 
 .containerDiv {
+    overflow-x: hidden;
     min-height: 100vh;
 }
 
